--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -1,9 +1,9 @@
 CC = gcc
 main : main.c crud_member.o
 	$(CC) -o $@ $^
-crud_member.o : crud_member.c crud_member.h
-	$(CC) -c $<
-C006 : main.c crud_member.o
+libcrud.a : crud_member.o
+	ar rv $@ $^
+C006 : main.o crud_member.o
 	$(CC) -o $@ $^ -I/Users/seooonggyu/Documents/22100110_kimseonggyu/Lab4 -L/Users/seooonggyu/Documents/22100110_kimseonggyu/Lab4 -lcrud
 clear :
-	rm *.o
+	rm *.o *.a C006
